--- a/ecoplastol/konfiguracja/produkcja/PanelProdWyrobyZakresSDR.xaml
+++ b/ecoplastol/konfiguracja/produkcja/PanelProdWyrobyZakresSDR.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ecoplastol.konfiguracja.produkcja.PanelProdWyrobZakresSDR"
+﻿<UserControl x:Class="ecoplastol.konfiguracja.produkcja.PanelProdWyrobyZakresSDR"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
