--- a/ecoplastol/produkcja/frmZleceniaProdukcyjne.xaml
+++ b/ecoplastol/produkcja/frmZleceniaProdukcyjne.xaml
@@ -61,7 +61,7 @@
             <Label Grid.Column="1" FontSize="20" Padding="5" Content="Do"/>
             <Label Grid.Column="2" FontSize="20" Padding="5" Content="Maszyna"/>
         </Grid>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" x:Name="grdFiltry">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="200"/>
@@ -72,7 +72,7 @@
             <DatePicker Grid.Column="1" FontSize="24" VerticalContentAlignment="Center" x:Name="dpDataZleceniaDo" SelectedDateChanged="DpDataZleceniaDo_SelectedDateChanged"/>
             <ComboBox Grid.Column="2" FontSize="24" VerticalContentAlignment="Center" x:Name="cbbMaszyna" SelectionChanged="CbbMaszyna_SelectionChanged" IsEditable="True"/>
         </Grid>
-        <DataGrid Grid.Row="2" Name="dgrdZlecenia" ItemsSource="{Binding}" AutoGenerateColumns="False" SelectionChanged="DgrdMeldunki_SelectionChanged" CanUserDeleteRows="False" CanUserAddRows="False" IsReadOnly="True">
+        <DataGrid Grid.Row="2" Name="dgrdZlecenia" ItemsSource="{Binding}" AutoGenerateColumns="False" SelectionChanged="dgrdZlecenia_SelectionChanged" CanUserDeleteRows="False" CanUserAddRows="False" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Nr zlecenia" Binding="{Binding id}"/>
                 <!--wyrob_kod_id-->
@@ -154,15 +154,19 @@
             <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="4"/>
                     <ColumnDefinition Width="10"/>
                     <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="4"/>
                     <ColumnDefinition Width="10"/>
                     <ColumnDefinition Width="200"/>
                     <ColumnDefinition Width="10"/>
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <ComboBox Grid.Column="0" FontSize="24" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding zlecenie_nr_maszyny}" DisplayMemberPath="nazwa" x:Name="cbbZlecenieMaszyna"/>
-                <ComboBox Grid.Column="2" FontSize="24" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding wyrob_kod_id}" x:Name="cbbWyrobKod"  >
+                <Border Grid.Row="0" Grid.Column="1" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdZlecenieMaszyna"/>
+                
+                <ComboBox Grid.Column="3" FontSize="24" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding wyrob_kod_id}" x:Name="cbbWyrobKod" IsTextSearchEnabled="True" TextSearch.TextPath="wyrob_kod" IsEditable="True" SelectionChanged="cbbWyrobKod_SelectionChanged">
                     <ComboBox.ItemTemplateSelector>
                         <ts:ComboBoxItemTemplateSelector>
                             <ts:ComboBoxItemTemplateSelector.SelectedTemplate>
@@ -182,8 +186,10 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
-                <TextBox Grid.Column="4" FontSize="24" Padding="0" Margin="0,0,3,0" VerticalContentAlignment="Center" Text="{Binding wyrob_kod_indeks}"/>
-                <TextBox Grid.Column="6" FontSize="24" Padding="0" VerticalContentAlignment="Center" Text="{Binding wyrob_kod_opis}"/>
+                <Border Grid.Row="0" Grid.Column="4" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdWyrobKod"/>
+                
+                <TextBox Grid.Column="6" FontSize="24" Padding="0" Margin="0,0,3,0" VerticalContentAlignment="Center" Text="{Binding wyrob_kod_indeks}"/>
+                <TextBox Grid.Column="8" FontSize="24" Padding="0" VerticalContentAlignment="Center" Text="{Binding wyrob_kod_opis}"/>
             </Grid>
             
             <Grid Grid.Row="3" Grid.Column="1">
@@ -211,15 +217,19 @@
                 
                 <Label Grid.Row="2" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Ilość"/>
                 <TextBox Grid.Row="2" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" x:Name="txtZlecenieIlosc" Text="{Binding zlecenie_ilosc}" PreviewTextInput="TxtZlecenieIlosc_PreviewTextInput"/>
+                <Border Grid.Row="2" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdZlecenieIlosc"/>
                 
                 <Label Grid.Row="3" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Data rozpoczęcia"/>
                 <DatePicker Grid.Row="3" Grid.Column="1" FontSize="16" CalendarStyle="{StaticResource styleCalendar}" x:Name="dpDataRozpoczecia" SelectedDate="{Binding zlecenie_data_rozp}"/>
+                <Border Grid.Row="3" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdDataRozpoczecia"/>
                 
                 <Label Grid.Row="4" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Data zakończenia"/>
                 <DatePicker Grid.Row="4" Grid.Column="1" FontSize="16" CalendarStyle="{StaticResource styleCalendar}" x:Name="dpDataZakonczenia" SelectedDate="{Binding zlecenie_data_zak}"/>
+                <Border Grid.Row="4" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdDataZakonczenia"/>
                 
                 <Label Grid.Row="5" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Nr partii surowca"/>
-                <TextBox Grid.Row="5" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" x:Name="txtZleceniaNrPartiiSurowca" Text="{Binding zlecenie_nr_partii_surowca}"/>
+                <TextBox Grid.Row="5" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" x:Name="txtZlecenieNrPartiiSurowca" Text="{Binding zlecenie_nr_partii_surowca}"/>
+                <Border Grid.Row="5" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdZlecenieNrPartiiSurowca"/>
                 
                 <Label Grid.Row="6" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Mieszanka"/>
                 <ComboBox x:Name="cbbTracePEm" Grid.Row="6" Grid.Column="1" FontSize="18" Padding="5,0,0,0" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding trace_pe_m}">
@@ -242,9 +252,11 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
+                <Border Grid.Row="6" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdTracePEm"/>
                 
                 <Label Grid.Row="7" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Nr partii produkcyjnej"/>
                 <TextBox Grid.Row="7" Grid.Column="1" MaxLength="6" FontSize="18" Padding="0" VerticalContentAlignment="Center" Text="{Binding trace_partia}" x:Name="txtTracePartia" PreviewTextInput="TxtTracePartia_PreviewTextInput"/>
+                <Border Grid.Row="7" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdTracePartia"/>
                 
                 <Label Grid.Row="8" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Zakład produkcyjny"/>
                 <ComboBox x:Name="cbbTraceProducent" Grid.Row="8" Grid.Column="1" FontSize="18" Padding="5,0,0,0" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding trace_producent}">
@@ -267,6 +279,7 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
+                <Border Grid.Row="8" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdTraceProducent"/>
                 
                 <Label Grid.Row="9" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="SDR"/>
                 <ComboBox x:Name="cbbTraceSDR" Grid.Row="9" Grid.Column="1" FontSize="18" Padding="5,0,0,0" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding trace_sdr}">
@@ -289,6 +302,7 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
+                <Border Grid.Row="9" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdTraceSDR"/>
                 
                 <Label Grid.Row="10" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Zakres SDR"/>
                 <ComboBox x:Name="cbbWyrobZakresSDR" Grid.Row="10" Grid.Column="1" FontSize="18" Padding="5,0,0,0" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding wyrob_zakres_sdr}">
@@ -311,7 +325,7 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
-
+                <Border Grid.Row="10" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdWyrobZakresSDR"/>
             </Grid>
 
             <Grid Grid.Row="3" Grid.Column="3">
@@ -336,9 +350,10 @@
                 </Grid.ColumnDefinitions>
                 <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Background="LightBlue"/>
                 <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="INFORMACJE DOT. KSZTAŁTEK ELEKTROOPOROWYCH"/>
-
+                
                 <Label Grid.Row="2" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Nr partii drutu"/>
                 <TextBox Grid.Row="2" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" x:Name="txtZlecenieNrPartiiDrutu" Text="{Binding zlecenie_nr_partii_drutu}"/>
+                <Border Grid.Row="2" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdZlecenieNrPartiiDrutu"/>
                 
                 <Label Grid.Row="3" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Rodzaj drutu"/>
                 <ComboBox x:Name="cbbWyrobRodzajDrutu" Grid.Row="3" Grid.Column="1" FontSize="18" Padding="5,0,0,0" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding wyrob_rodzaj_drutu}">
@@ -361,6 +376,7 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
+                <Border Grid.Row="3" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdWyrobRodzajDrutu"/>
                 
                 <Label Grid.Row="4" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Typ regulacji napięcia"/>
                 <ComboBox x:Name="cbbITFtrn" Grid.Row="4" Grid.Column="1" FontSize="18" Padding="5,0,0,0" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding itf_trn}">
@@ -383,15 +399,19 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
+                <Border Grid.Row="4" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdITFtrn"/>
                 
                 <Label Grid.Row="5" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Oporność"/>
-                <TextBox Grid.Row="5" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" Text="{Binding itf_rez}"/>
-
+                <TextBox Grid.Row="5" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" Name="txtITFrez" Text="{Binding itf_rez}"/>
+                <Border Grid.Row="5" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdITFrez"/>
+                
                 <Label Grid.Row="6" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Czas zgrzewania 1"/>
-                <TextBox Grid.Row="6" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" Text="{Binding itf_cz1}"/>
+                <TextBox Grid.Row="6" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" Name="txtITFcz1" Text="{Binding itf_cz1}"/>
+                <Border Grid.Row="6" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdITFcz1"/>
                 
                 <Label Grid.Row="7" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Czas zgrzewania 2"/>
-                <TextBox Grid.Row="7" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" Text="{Binding itf_cz2}"/>
+                <TextBox Grid.Row="7" Grid.Column="1" FontSize="18" Padding="0" VerticalContentAlignment="Center" Name="txtITFcz2" Text="{Binding itf_cz2}"/>
+                <Border Grid.Row="7" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdITFcz2"/>
                 
                 <Label Grid.Row="8" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Czas chłodzenia 1"/>
                 <ComboBox x:Name="cbbITFCC1" Grid.Row="8" Grid.Column="1" FontSize="18" Padding="5,0,0,0" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding itf_cc1}">
@@ -414,6 +434,7 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
+                <Border Grid.Row="8" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdITFcc1"/>
                 
                 <Label Grid.Row="9" Grid.Column="0" FontSize="18" Padding="10,0,0,0" VerticalContentAlignment="Center" Content="Czas chłodzenia 2"/>
                 <ComboBox x:Name="cbbITFCC2" Grid.Row="9" Grid.Column="1" FontSize="18" Padding="5,0,0,0" VerticalContentAlignment="Center" SelectedValuePath="id" SelectedValue="{Binding itf_cc2}">
@@ -436,6 +457,7 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
+                <Border Grid.Row="9" Grid.Column="2" BorderThickness="2" BorderBrush="Red" Visibility="Visible" Name="brdITFcc2"/>
             </Grid>
         </Grid>
         <StackPanel Grid.Row="5" Orientation="Horizontal">
